# security-camera-analysis

./: README.md  main.py  pyproject.toml
docs/design/: 00-init.md
src/security_camera_analysis/: main.py
