[project]
name = "security-camera-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "norfair[video]>=2.3.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.127",
]
