[project]
name = "security-camera-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "norfair[video]>=2.3.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.127",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
security-camera-analysis = "security_camera_analysis.main:main"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["ffmpeg.*", "tqdm.*", "ultralytics.*"]
# Makes mypy analyze imports from installed packages even if missing a py.typed
# marker or stubs. Note that analyzing all unannotated modules might result in
# issues when analyzing code not designed to be type checked and may
# significantly increase how long mypy takes to run.
follow_untyped_imports = true
