[project]
requires-python = ">=3.11,<4.0"
name = "security-camera-analysis"
version = "1.0.0"
description = "Detect and track objects in videos, and save slices."
readme = "README.md"
authors = [{ name = "Pablo Daniel Aguado", email = "1@asdfasdf.com" }]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "norfair[video]>=2.3.0",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.127",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
security-camera-analysis = "security_camera_analysis.main:main"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["ffmpeg.*", "tqdm.*", "ultralytics.*"]
# Makes mypy analyze imports from installed packages even if missing a py.typed
# marker or stubs. Note that analyzing all unannotated modules might result in
# issues when analyzing code not designed to be type checked and may
# significantly increase how long mypy takes to run.
follow_untyped_imports = true
